--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<p class="feels-like-temp">--</p>
 			</article>
 			<article id="humidity">
-				<h1>--</h1>
+				<h1>Humidity</h1>
 				<p class="humidity">--</p>
 			</article>
 		</main>
